# TernaryMoralLogic

./: .gitignore  11.md  A.md  AI_UNIVERSAL_OATH_TO_HUMANS.md  ARTICLES OF INCORPORATION OF THE GOUKASSIAN FOUNDATION.md  ATTRIBUTION.md  CHANGELOG.md  CITATION.cff  CITATION.cff.bak  COUNCIL_ARCHIVE.md  Constitutional AI The  Standard for Accountable Artificial Agents.md  Constitutional AI The Ternary Moral Logic Governance Standard for Accountable Artificial Agents.md  Constitutional_Architecture_for_Accountable_Artificial_Intelligence.docx  Constitutional_Architecture_for_Accountable_Artificial_Intelligence.md  Dockerfile  GOUKASSIAN_PROMISE.html  GOUKASSIAN_PROMISE.html.bak  GOUKASSIAN_PROMISE.md  GOUKASSIAN_PROMISE.md.bak  GOVERNANCE.md  GOVERNANCE.md.bak  General FAQ v5.0.md  General_FAQ.md  Goukassian_Promise.html  Goukassian_Vow.md  IEEE_Submission.md  IEEE_Submission.txt  INSTALLATION.md  INTELLECTUAL_PROPERTY.md  LICENSE  LICENSE.bak  Lev_TML_Quotes_v1.md  My Algorithmic Will Creating AI Ethics That No One Can Own.md  My Algorithmic Will_A Constitutional Architecture for Auditable AI.html  My Algorithmic Will_A Constitutional Architecture for Auditable AI.md  PROTECTION_PRINCIPLES.md  README.md  ReadMe-New.md  SUMMARY.md  Set of 33 dilemmas of conflicts and complexities.md  (+77 more)
1-Temp/: Kimi.md  TML_Unified.md  TML_Unified_Part_I_v3.md  TML_Unified_Section_I_final.md  The Constitutional Architecture for Accountable AI.md
1_temp/: Deliverables.md
AGI Hardware Governance/: AGI_Governance_v1.ots  Forensic_Integrity_Certificate_v1.md  Hardware-Enforceable Governance for AGI_ASI Systems-K.md  Hardware-Enforced-T.md  Hardware_Enforceable_Governance_for_AGI_ASI_Systems-K.html  Hardware_Enforceable_Governance_for_AGI_ASI_Systems-K.md  Hardware_Enforcement-P.md  I Read Lev’s Goukassian Document “TML as a Hardware-Enforceable Constitutional Substrate for AI Governance.”, So You Don’t Have To.md  Integration_with_Advanced_AI_Systems-Q.html  README.md  TML Hardware-Enforceable AI Governance.md  TML_Constitutional_Substrate_Resilience-I.html  TML_Constitutional_Substrate_Resilience-W.html  TML_Constitutional_Substrate_Resilience.html  TML_Enforcer.sol  calculate_root.py  (+9 more)
(+1045 files in other folders)
