[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tml-always-memory"
version = "5.0.0"
description = "Ternary Moral Logic - Always Memory Framework for AI Accountability"
authors = [{name = "Lev Goukassian", email = "leogouk@gmail.com"}]
maintainers = [{name = "Lev Goukassian", email = "leogouk@gmail.com"}]
requires-python = ">=3.9"
license = {text = "MIT-Attribution-Required"}
keywords = ["ai-ethics", "accountability", "always-memory", "sacred-zero", "tml"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "cryptography>=41.0.0",
    "pydantic>=2.0.0",
    "httpx>=0.24.0",
    "python-dateutil>=2.8.2",
]

[project.urls]
"Homepage" = "https://github.com/FractonicMind/TernaryMoralLogic"
"Documentation" = "https://github.com/FractonicMind/TernaryMoralLogic/blob/main/docs/General_FAQ.md"
"Bug Tracker" = "https://github.com/FractonicMind/TernaryMoralLogic/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
]

guardian = [
    "web3>=6.0.0",  # For Blockchain anchoring
    "coincurve>=18.0.0",  # For secp256k1 signatures
]

[project.scripts]
tml-memory = "tml.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311']

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
